src/scss/style.scss
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0 0 0 0;
	padding: 0 0 0 0;
	line-height: 1;
}

@font-face {
	font-family: nyt-cheltenham;
	src: url("/img/fonts/cheltenham-normal-700.ttf") format('truetype');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: "old-english";
	src: url("/img/fonts/OldeEnglish.ttf");
}

$black: #000;
$gray-10: #121212;
$gray-20: rgba(51, 51, 51, 1); // #333
$gray-20-invisible: rgba(51, 51, 51, 0);
$gray-25: #444;
$gray-30: #666;
$gray-35: #888;
$gray-40: #999;
$gray-45: #b3b3b3;
$gray-50: #ccc;
$gray-60: #e2e2e2;
$gray-70: #ebebeb;
$gray-80: #f3f3f3;
$gray-90: #f7f7f7;
$white: #fff;

// blue - dark to light

$blue-10: #004276;
$blue-20: #326891;
$blue-30: #6288a5;
$blue-40: #879cb4;
$blue-50: #f0f8fc;

// red - dark to light

$red-10: #a81817;
$red-20: #d31e25;

// yellow - dark to light

$yellow-10: #c5a257;
$yellow-20: #f8f8d4;
$yellow-30: #fbfbea;

// misc - dark to light

$newsprint-10: #bab8b3;
$newsprint-20: #e9ebe4;
$newsprint-25: #f4f5f2;
$newsprint-30: #f7f7f5;

$text-color: $gray-20;

$link-color: $blue-20;
$link-hover-color: $blue-30;
$link-visited-color: $blue-20;

$insider-yellow: #fed464;

//Color area end

$L-width: 970px;
$transition-delay: 0.5s;
$transition-duration: 0.75s;

#root {

	#nyt-foreground-icon {
		border: 1px solid $gray-20;
		border-radius: 50%;
		position: absolute;
		animation: border-animation 0.75s infinite;
	}

	@keyframes border-animation {
		from {
			padding: -50px;
			margin: 50;
			border-color: $gray-20
		}

		to {
			padding: 50px;
			margin: -50px;
			border-color: $gray-20-invisible
		}
	}

	.foreground-in {
		width: 100%;
		height: 100%;
		background: white;
		position: absolute;
		opacity: 1;
		z-index: 90;

		img {
			max-width: 16%;
			max-height: 16%;
			top: 46%;
			left: 47%;
		}
	}

	.foreground-out {
		width: 100%;
		height: 100%;
		background: transparent;
		opacity: 0;
		position: absolute;
		transition: opacity $transition-duration linear $transition-delay, background $transition-duration linear $transition-delay;
		z-index: 90;

		img {
			transition: all $transition-duration linear $transition-delay;
			max-width: 16%;
			max-height: 16%;
			top: 46%;
			left: 47%;
		}
	}

	.header-holder {

		max-width: $L-width;
		margin: 10px auto 0 auto;
		padding-bottom: 10px;
		border-bottom: 1px solid $gray-25;

		.header-item {

			display: inline-block;
			width: 32%;

			i {

				vertical-align: middle;
				margin-right: 6px;
			}

			.todayspaper-link {
				font-size: 0.6875rem;
				line-height: 0.6875rem;
				font-weight: 400;
				font-style: normal;
				font-family: "nyt-franklin", arial, helvetica, sans-serif;
				vertical-align: middle;
				text-decoration: none;
				color: $black;
			}

			.todayspaper-link:hover {
				text-decoration: underline;
			}

			.date-time {
				font-size: 0.6875rem;
				line-height: 0.6875rem;
				font-weight: 400;
				font-style: normal;
				font-family: "nyt-franklin", arial, helvetica, sans-serif;
				vertical-align: middle;
				text-decoration: none;
				color: $gray-20;
			}
		}

		.header-item:nth-child(3n-1) {
			text-align: center;
			margin-left: 1%;
			margin-right: 1%;
		}

		.header-item:nth-child(3n) {
			text-align: right;
			margin-right: 1%;
		}

		.header-item:nth-child(3n-2) {
			margin-left: 1%;
			text-align: left;
		}
	}

	.masthead {

		max-width: $L-width;
		min-height: 10vh;
		margin: 0 auto;

		.textarea {

			margin: 0 auto;
			position: relative;


			h1 {
				font-size: 90px;
				color: $black;
				/* Not placed at other renditions yet */
				text-align: center;
				padding: 20px;
				font-weight: 700;
				font-family: "old-english", georgia, "times new roman", times, serif;
				visibility: hidden;
				z-index: -99;
				position: absolute;

			}

			svg {

				width: 100%;
				padding: 20px;
				text-align: center;
			}

			h2 {
				font-size: 20px;
				text-align: center;
				color: $black;
				/* Not placed at other renditions yet */
				padding-bottom: 20px;
				font-weight: 700;
				font-family: "nyt-cheltenham", georgia, "times new roman", times, serif;

			}
		}

		.input-holder {
			width: 100%;
			text-align: right;
			margin-bottom: 14px;

			input {
				width: 22%;
				height: 20px;
				padding: 2px 3px;
				border: 1px solid #dde6e9;
				border-radius: 2px;
				margin-right: 4%; /* This is a disguisting hack, fix it later */
			}
		}
	}

	.list-of-news {

		max-width: $L-width;
		margin: 0 auto;
		position: relative;
		overflow: hidden;
		/* This is a trick! I*'m not hiding anything but browsers need to calculate the height of the block to actually hide something, so they calculate the content instead. */
		display: flex;
		flex-wrap: wrap;

		.menu-news {

			display: flex;
			flex-direction: column;
			position: relative;
			width: 23%;
			min-height: 220px;
			vertical-align: top;
			overflow: hidden;
			padding-top: 20px;
			border-top: 1px solid $gray-45;

			.NewsCard {

				height: 100%;
				display: block;

				.text-section {

					h3 {

						font-size: 18px;
						padding-bottom: 14px;
						font-family: "nyt-cheltenham", georgia, "times new roman", times, serif;
						line-height: 1.75rem;
					}
				}

			}

			.link-holder:before {
				vertical-align: bottom;
			}

			.link-holder {
				bottom: 0;
				display: block;
				vertical-align: bottom;
			}

			p {
				font-size: 0.825rem;
				color: $gray-20;
				padding-bottom: 14px;
				line-height: 1.125rem;
				font-family: georgia, "times new roman", times, serif;
			}

			a {
				color: $link-color;

				span {
					font-weight: 900;
				}
			}

			a:hover {
				color: $link-hover-color;
			}

			a:visited {
				color: $link-visited-color;
			}
		}

		.photo-thumbnail {

			.thumbnail-image {
				margin: 0 auto 14px;
				background-size: cover;
				display: block;
				width: 100%;
				max-height: 207px;
			}
		}

	}

	.footer {
		border-top: 1px solid $gray-25;
		max-width: $L-width;
		position: relative;
		margin: 0 auto;
		padding-top: 20px;
		padding-bottom: 20px;
		height: 40px;

		div {
			display: inline-block;
			vertical-align: middle;
			position: relative;
			height: 100%;
			margin-right: 1%;
		}

		p {
			display: inline-block;
			position: absolute;
			font-size: 0.825rem;
			color: $gray-20;
			line-height: 1.125rem;
			font-family: georgia, "times new roman", times, serif;
			top: 40%;
			margin-left: 1%;

			span {
				font-weight: 900;
			}
		}

		.disclaimer {
			float: right;
		}
	}
}

@media (min-width: 601px) {

	.menu-news:nth-child(4n-3) {
		margin-left: 1%;
		margin-right: 1%;
	}

	.menu-news:nth-child(4n-2) {
		margin-right: 1%;
	}

	.menu-news:nth-child(4n-1) {
		margin-right: 1%;

	}

	.menu-news:nth-child(4n) {
		margin-right: 1%;
	}
}

@media (max-width: 701px) {

	#root {

		.masthead {
			max-width: 700px;

			.input-holder {
				text-align: center;

				input {
					width: 90%;
					margin: 0 auto;
					text-align: center;
				}
			}

			.textarea {

				svg {
					padding: 20px 0;
				}
			}

			h1 {
				font-size: 60px;
			}
		}
	}

}

@media (max-width: 601px) {

	#root {

		.list-of-news {

			.menu-news {

				width: 48%;

				.link-holder:before {
					vertical-align: bottom;
				}

				.link-holder {
					bottom: 0;
					display: block;
					vertical-align: bottom;
				}

			}

			.menu-news:nth-child(2n-1) {
				margin-left: 1%;
				margin-right: 1%;
			}

			.menu-news:nth-child(2n) {
				margin-right: 1%;
			}
		}

	}
}

@media (max-width: 450px) {

	#root {

		.masthead {

			h1 {
				font-size: 40px;
			}
		}

		.list-of-news {

			.menu-news {

				width: 97%;
				margin-right: 1.5%;
				margin-left: 1.5%;

			}
		}

		.footer {
			margin: 0 auto;
			padding-top: 14px;
			padding-bottom: 14px;
			position: relative;
			overflow: auto;
			height: 100%;

			div {
				display: block;
				vertical-align: middle;
				position: relative;
				height: 100%;
				padding-bottom: 14px;
				margin: 0 auto;
			}

			p {
				display: block;
				text-align: center;
				top: 0%;
				position: relative;
			}

			.disclaimer {
				text-align: center;
				float: none;
			}
		}

	}
}

@media (max-width: 400px) {

	#root {

		.header-holder {

			.header-item:nth-child(3n-2) {
				width: 26%;
			}

			.header-item:nth-child(3n-1) {
				width: 30%;
			}

			.header-item:nth-child(3n) {
				width: 40%;
			}
		}
	}
}

